--- a/zt-groupfragment/src/main/AndroidManifest.xml
+++ b/zt-groupfragment/src/main/AndroidManifest.xml
@@ -8,6 +8,13 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.AppFrame10">
+
+        <activity
+            android:name=".act.ActTabV4"
+            android:exported="false" />
+        <activity
+            android:name=".act.ActTabV3"
+            android:exported="false" />
         <activity
             android:name=".act.ActTabV2"
             android:exported="false" />
