--- a/zt-speechrecognizer/src/main/AndroidManifest.xml
+++ b/zt-speechrecognizer/src/main/AndroidManifest.xml
@@ -2,15 +2,14 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android">
 
     <uses-permission android:name="android.permission.RECORD_AUDIO" />
-    <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.RECORD_AUDIO" />
+    <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission
         android:name="android.permission.WRITE_EXTERNAL_STORAGE"
         android:maxSdkVersion="28" />
     <uses-permission
         android:name="android.permission.READ_EXTERNAL_STORAGE"
-        android:maxSdkVersion="28" />
-    <!-- Android 10+ 需要 -->
+        android:maxSdkVersion="28" /> <!-- Android 10+ 需要 -->
     <uses-permission android:name="android.permission.ACCESS_MEDIA_LOCATION" />
 
     <queries>
@@ -27,6 +26,9 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.AppFrame10">
         <activity
+            android:name=".audio3.MyAudioV3"
+            android:exported="false" />
+        <activity
             android:name=".MainActivity"
             android:exported="true"
             android:label="@string/app_name"
@@ -41,9 +43,7 @@
             android:name=".speechtotext.MySpeechToText"
             android:exported="true"
             android:label="系统语音识别"
-            android:theme="@style/Theme.AppFrame10">
-
-        </activity>
+            android:theme="@style/Theme.AppFrame10"></activity>
         <activity
             android:name=".audio.MyRecordAct2"
             android:exported="true" />
